--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Informations", "Raiting", "Salentina"]
+  "cSpell.words": ["сards", "Informations", "Raiting", "Salentina"]
 }
