--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "airbnb",
+  "homepage": "https://poldyaich97.github.io/airbnb/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
@@ -10,6 +12,8 @@
     "styled-components": "^5.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
