--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/Poldyaich97/airbnb.git",
+  "author": "Poldyaich97 <daniil.poldyaev97@gmail.com>",
+  "license": "MIT"
 }
